# CineMatch_AI

./: .gitignore  app.py  init_db.py  merge_datasets.py  models.py  pyproject.toml  requirements.txt  second.py  train.py
static/: script.js  style.css
templates/: index.html
